Preserve deterministic catalog order